# black-ole

./: .gitignore  CMakeLists.txt  README.md  bench.sh  fix.py
archives/: photon.glsl
docs/: classes.md  physics.md
include/: blackhole.hpp  image.hpp  photon.hpp  pixel.hpp  tetrade.hpp  vectors.hpp
include/cpu/: camera.hpp  image.hpp  skybox.hpp  vectors.hpp
include/gpu/: camera.hpp  commons.hpp  image.hpp  opengl.hpp
output_filtre/: fetch.py
scripts/: cp.sh  cr.sh
src/: image.cpp  main.cpp  main_opengl.cpp  photon.cpp  pixel.cpp  raytracer.glsl  skybox.cpp  vectors.cpp
src/cpu/: blackhole.cpp  image.cpp  pixel.cpp
src/gpu/: F_generator.py  accretionDisk.glsl  blackhole.glsl  camera.cpp  main.glsl  main_opengl.cpp  metric.glsl  opengl.cpp  photon.glsl  pixel.glsl  raytracer.glsl  sun.glsl  tetrade.glsl  variables.glsl
